k8s/applications/backend/discovery/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discovery-ingress
  labels:
    env: production
    tier: backend
    app: discovery
    name: discovery-ingress
spec:
  rules:
    - host: <백엔드 유레카 서버 도메인> # TODO
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: discovery
                port:
                  number: 8761
